src/objects/EmployeeRegistration__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>England</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Emp_id__c</fullName>
        <displayFormat>E{0000}</displayFormat>
        <externalId>true</externalId>
        <label>Emp_id</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>EmployeeType__c</fullName>
        <label>EmployeeType</label>
        <picklist>
            <picklistValues>
                <fullName>Administrator</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Devloper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tester</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>FirstName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HouseNumber__c</fullName>
        <label>HouseNumber</label>
        <length>8</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>LastName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mail_id__c</fullName>
        <label>Mail_id</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>30</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RegistrationDate__c</fullName>
        <label>RegistrationDate</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SecurityQuestion__c</fullName>
        <label>SecurityQuestion</label>
        <picklist>
            <picklistValues>
                <fullName>Who is your role model?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>What is your favourite place?</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Who is your childhood hero?</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Security_Question_Answer__c</fullName>
        <label>Security Question Answer</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <controllingField>Country__c</controllingField>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Melbourne</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canbarra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greenwitch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StreetName__c</fullName>
        <label>StreetName</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>EmployeeRegistration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>EmployeeRegistration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmployeeRegistration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Date_of_birth_year_should_before_1990</fullName>
        <active>true</active>
        <errorConditionFormula>YEAR( DateOfBirth__c )&gt;=1990</errorConditionFormula>
        <errorMessage>year should be below 1990</errorMessage>
    </validationRules>
</CustomObject>